Fixed the build with Java 25